--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <title>3ELDA1</title>
 </head>
 <body>
-    <h1>Welcome!</h1>
+    <div class="container">
+    	<div class="hero">
+    		<h1>3ELDA1</h1>
+    	</div>
+    </div>
 </body>
 </html>
