--- a/index.html
+++ b/index.html
@@ -8,12 +8,54 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
     <!-- Link to master stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/master.css">
+    <!-- Animate.css CDN -->
+  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <title>3ELDA1</title>
 </head>
 <body>
     <div class="container">
     	<div class="hero">
     		<h1>3ELDA1</h1>
+    	</div>
+
+    	<div class="elever">
+
+    		<div class="elev animated fadeIn" id="arunanthi"><a href="#">Tobias Lystad</a>
+    		</div>
+
+    		<div class="elev animated fadeIn" id="johannes"><a href="#">Tobias Lystad</a>
+    		</div>
+
+    		<div class="elev animated fadeIn" id="georgi"><a href="#">Tobias Lystad</a>
+    		</div>
+
+    		<div class="elev animated fadeIn" id="tobias"><a href="#">Tobias Lystad</a>
+    		</div>
+
+    		<div class="elev animated fadeIn" id="jonaso"><a href="#">Tobias Lystad</a>
+    		</div>
+
+    		<div class="elev animated fadeIn" id="jonasa"><a href="#">Tobias Lystad</a>
+    		</div>
+
+    		<div class="elev animated fadeIn" id="sander"><a href="#">Tobias Lystad</a>
+    		</div>
+
+    		<div class="elev animated fadeIn" id="eivind"><a href="#">Tobias Lystad</a>
+    		</div>
+
+    		<div class="elev animated fadeIn" id="nicolas"><a href="#">Tobias Lystad</a>
+    		</div>
+
+    		<div class="elev animated fadeIn" id="sabah"><a href="#">Tobias Lystad</a>
+    		</div>
+
+    		<div class="elev animated fadeIn" id="martin"><a href="#">Tobias Lystad</a>
+    		</div>
+
+    		<div class="elev animated fadeIn" id="erlend"><a href="#">Tobias Lystad</a>
+    		</div>
+
     	</div>
     </div>
 </body>
