--- a/index.html
+++ b/index.html
@@ -20,40 +20,40 @@
 
     	<div class="elever">
 
-    		<div class="elev animated fadeIn" id="arunanthi"><a href="#">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="arunanthi"><a href="http://x.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="johannes"><a href="#">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="johannes"><a href="http://x.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="georgi"><a href="#">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="georgi"><a href="http://x.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="tobias"><a href="#">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="tobias"><a href="http://x.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="jonaso"><a href="#">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="jonaso"><a href="http://x.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="jonasa"><a href="#">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="jonasa"><a href="http://x.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="sander"><a href="#">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="sander"><a href="http://x.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="eivind"><a href="#">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="eivind"><a href="http://x.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="nicolas"><a href="#">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="nicolas"><a href="http://x.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="sabah"><a href="#">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="sabah"><a href="http://x.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="martin"><a href="#">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="martin"><a href="http://x.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="erlend"><a href="#">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="erlend"><a href="http://x.3elda1.com">Tobias Lystad</a>
     		</div>
 
     	</div>
