--- a/index.html
+++ b/index.html
@@ -20,40 +20,40 @@
 
     	<div class="elever">
 
-    		<div class="elev animated fadeIn" id="arunanthi"><a href="http://x.3elda1.com">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="arunanthi"><a href="http://arunanthi.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="johannes"><a href="http://x.3elda1.com">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="johannes"><a href="http://johannes.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="georgi"><a href="http://x.3elda1.com">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="georgi"><a href="http://georgi.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="tobias"><a href="http://x.3elda1.com">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="tobias"><a href="http://tobias.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="jonaso"><a href="http://x.3elda1.com">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="jonaso"><a href="http://olsen.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="jonasa"><a href="http://x.3elda1.com">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="jonasa"><a href="http://ahmad.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="sander"><a href="http://x.3elda1.com">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="sander"><a href="http://sander.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="eivind"><a href="http://x.3elda1.com">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="eivind"><a href="http://eivind.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="nicolas"><a href="http://x.3elda1.com">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="nicolas"><a href="http://nicolas.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="sabah"><a href="http://x.3elda1.com">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="sabah"><a href="http://sabah.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="martin"><a href="http://x.3elda1.com">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="martin"><a href="http://martin.3elda1.com">Tobias Lystad</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="erlend"><a href="http://x.3elda1.com">Tobias Lystad</a>
+    		<div class="elev animated fadeIn" id="erlend"><a href="http://erlend.3elda1.com">Tobias Lystad</a>
     		</div>
 
     	</div>
