--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     		<div class="elev animated fadeIn" id="tobias"><a href="http://tobias.3elda1.com">Tobias</a>
     		</div>
 
-    		<div class="elev animated fadeIn" id="jonaso"><a href="http://olsen.3elda1.com">Jonas O,</a>
+    		<div class="elev animated fadeIn" id="jonaso"><a href="http://olsen.3elda1.com">Jonas O.</a>
     		</div>
 
     		<div class="elev animated fadeIn" id="jonasa"><a href="http://ahmad.3elda1.com">Jonas A.</a>
